# gfx

./: .gitignore  CMakeLists.txt  README.md
Include/: Gfx.h
Samples/: CMakeLists.txt
Samples/01_HelloTriangle/: CMakeLists.txt
Samples/01_HelloTriangle/Source/: Main.cpp
Samples/01_HelloTriangle/Techniques/: HelloTriangle.json
Samples/02_TexturedQuad/: CMakeLists.txt
Samples/02_TexturedQuad/Source/: Main.cpp
Samples/02_TexturedQuad/Techniques/: TexturedQuad.json
Samples/03_Compute/: CMakeLists.txt
Samples/03_Compute/Source/: Main.cpp
Samples/03_Compute/Techniques/: Compute.json
Samples/Testbed/: CMakeLists.txt  gen_vs2017_x64.bat
Samples/Testbed/Source/: Atmosphere.h  Camera.h  CameraController.h  Context.h  ImGuiImpl.h  Lighting.h  Main.cpp  PostProcessEffects.h
Samples/Testbed/Techniques/: AtmospherePrecomputeAmbientLightLUT.json  AtmospherePrecomputeDensityLUT.json  AtmospherePrecomputeDirectionalLightLUT.json  AtmospherePrecomputeSkyLUT.json  AtmosphereSky.json  Lighting.json  TemporalAntiAliasing.json  ToneMapping.json
Source/: Gfx.cpp  GfxConversion.h  GfxInternal.h  GfxModel.cpp  GfxTechnique.cpp  GfxUtil.h
